Revert "cursor advice 1"
This reverts commit ff85cd88fa0348c06d595e28c86dfe530fbf494e.